changed the newest contents

--- a/sources /01.Day1/and_xor/and_xor.ipynb
+++ b/sources /01.Day1/and_xor/and_xor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     "\n",
     "# 학습 전용 데이터와 결과 준비하기 --- (*2)\n",
     "# X , Y\n",
-    "learn_data = [[0,0], [1,0], [0,1], [1,1]]\n",
+    "learn_data = [[0,0], [1,0], [0,1], [1,1]] # [[0,0], [1,0], [0,1]]\n",
     "# X and Y\n",
     "learn_label = [0, 0, 0, 1]\n",
     "\n",
@@ -32,7 +32,7 @@
     "clf.fit(learn_data, learn_label)\n",
     "\n",
     "# 테스트 데이터로 예측하기 --- (*5)\n",
-    "test_data = [[0,0], [1,0], [0,1], [1,1]]\n",
+    "test_data = [[0,0], [1,0], [0,1], [1,1]] # [[1,1]]\n",
     "test_label = clf.predict(test_data)\n",
     "\n",
     "# 예측 결과 평가하기 --- (*6)\n",
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0], [1, 0], [0, 1], [1, 1]] 의 예측 결과:  [1 1 1 1]\n",
+      "[[0, 0], [1, 0], [0, 1], [1, 1]] 의 예측 결과:  [0 0 0 0]\n",
       "정답률 =  0.5\n"
      ]
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
